--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Comfortaa|Poiret+One|Raleway|Ubuntu+Mono&display=swap');
 .jumbotron-fluid {
     background-image: url("../static/assets/backgrounds/h_img.jpg");
     background-size: cover;
@@ -11,11 +12,19 @@
   width: 80px;
 }
 
+.container{
+  font-family: 'Comfortaa', cursive;
+}
+
 .mouse{
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 20px;
+}
+
+#bounce{
+  animation: bounce 3s infinite;
 }
 
 .services{
@@ -24,13 +33,47 @@
   height: 300px;
   margin-top:30px
 }
-.hide {
-  display:none;
+
+.services h1{
+  position: relative;
+  top: 30px;
+  margin-bottom: 20px;
 }
+
+.about{
+  font-family: 'Comfortaa', cursive;
+}
+
+.hide{
+  display: none;
+}
+
+.image-overlay{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color:rgba(0, 0, 0, 0.6);
+  display:flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+  opacity: 0;
+}
+
+.img-overlay:hover{
+ opacity: 1;
+}
+
 .contact{
   background-image: url("../static/assets/backgrounds/c_image.jpg");
   height: 450px;
 }
 #form {
   background-color: #66000000
+}
+.socials {
+  margin-left: auto;
+  margin-right: auto;
 }
