--- a/css/styles.css
+++ b/css/styles.css
@@ -1,79 +1,186 @@
 @import url('https://fonts.googleapis.com/css?family=Comfortaa|Poiret+One|Raleway|Ubuntu+Mono&display=swap');
+html {
+    scroll-behavior: smooth;
+}
+
+* {font-family: 'Comfortaa', cursive;
+    box-sizing: border-box;
+}
+.logo {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+.mouse {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+}
+
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.6);
+    height: 668px;
+}
+
+.overlay > img, .h-text {
+    position: relative;
+    top: 33%;
+}
+.h-text{
+    font-family: 'Comfortaa', cursive;
+}
+.smaller-text{
+    font-family: 'Ubuntu Mono', monospace;
+}
+.overlay > img, .welcome {
+    margin-bottom: 30px;
+}
+
+.click {
+    margin-top: 330px;
+}
+
 .jumbotron-fluid {
-    background-image: url("../static/assets/backgrounds/h_img.jpg");
+    background-image: url("./static/assets/backgrounds/h_img.jpg");
     background-size: cover;
-    height: 580px;
+    height: 668px;
+}
+#bounce {
+    animation: bounce 3s infinite;
 }
 
-.center{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 80px;
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+    }
+    40% {
+        transform: translateY(-55px);
+    }
+    60% {
+        transform: translateY(-45px);
+    }
 }
 
-.container{
-  font-family: 'Comfortaa', cursive;
+.about {
+    height: 250px;
 }
 
-.mouse{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 20px;
+.about h1 {
+    margin-top: 30px;
 }
 
-#bounce{
-  animation: bounce 3s infinite;
+.services {
+    background-image: url("../images/backgrounds/s_image.jpg");
+    height: 280px;
 }
 
-.services{
-  background-image: url("../static/assets/backgrounds/s_image.jpg");
-  background-size: cover;
-  height: 300px;
-  margin-top:30px
+.services h1 {
+    position: relative;
+    top: 30px;
+    margin-bottom: 20px;
 }
 
-.services h1{
-  position: relative;
-  top: 30px;
-  margin-bottom: 20px;
+.small-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
+    height: 280px;
 }
 
-.about{
-  font-family: 'Comfortaa', cursive;
+
+.what-we-do h1 {
+    margin-top: 30px;
+}
+figcaption{
+    margin-top: 20px;
 }
 
-.hide{
-  display: none;
+.portfolio {
+    /*height: 650px;*/
+    padding-bottom: 50px;
 }
 
-.image-overlay{
-  position:absolute;
-  top:0;
-  left:0;
-  width:100%;
-  height:100%;
-  background-color:rgba(0, 0, 0, 0.6);
-  display:flex;
-  flex-direction: column;
-  align-items:center;
-  justify-content: center;
-  opacity: 0;
+.contacts {
+    background-image: url("../images/backgrounds/c_image.jpg");
+    background-size: cover;
 }
 
-.img-overlay:hover{
- opacity: 1;
+.contacts h1 {
+    position: relative;
+    top: 30px;
+}
+.text{
+    margin-bottom: 20px;
 }
 
-.contact{
-  background-image: url("../static/assets/backgrounds/c_image.jpg");
-  height: 450px;
+.contact-overlay {
+    background-color: rgba(0, 0, 0, 0.7);
 }
-#form {
-  background-color: #66000000
+
+.form-control{
+    background-color: #66000000;
+    color: white;
 }
-.socials {
-  margin-left: auto;
-  margin-right: auto;
+.input{
+    margin-top: 30px;
+}
+.b-text{
+    font-family: 'Comfortaa', cursive;
+}
+.m-text{
+    font-family: 'Raleway', sans-serif;
+}
+.name{
+    margin-right: 5px;
+}
+input.error {
+    border: 1px dashed red;
+    font-weight: 300;
+    color: red;
+}
+.email{
+    margin-right: 5px;
+}
+.social{
+    justify-content:center;
+    padding-left:10px;
+    padding-right:10px;
+}
+.white{
+    height: 300px;
+    width: 366px;
+    background-color: rgba(255, 255, 255, 0.5);
+    display: none;
+}
+.img-fluid{
+    max-width: 100%;
+    height: auto;
+}
+.portimg {
+    float: right;
+    position: relative;
+    margin: 5px;
+    /*color: #333;*/
+}
+.portimg .porttext {
+    display: none;
+    opacity: 1;
+    background-color:rgba(255, 255, 255, 0.6);
+    width: auto;
+    position: absolute;
+    bottom: 0;
+    color: deepskyblue;
+    text-align: center;
+    font-weight: bold;
+    font-size: 30px;
+    padding: 30px;
+    height: 100%;
+}
+textarea::placeholder{
+    color: #ffffff;
 }
