--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Copse|Delius+Swash+Caps|Gabriela|Unkempt&display=swap')
+@import url('https://fonts.googleapis.com/css?family=Copse|Delius+Swash+Caps|Gabriela|Unkempt&display=swap');
 
-
-body {
-    margin: 0;
-    padding: 0;
-}
+* { font-family: 'Comfortaa', cursive;
+    box-sizing: border-box;
+    },
 
 .container-fluid {
-    margin: 0;
+    margin-top:10px;
     padding: 0;
 }
 
